corrigindo erros de incompatibilidade